--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -91,8 +91,7 @@
     .judul1 {
         color: #31081F;
         font-family: "Montserrat", sans-serif;
-        font-weight: bold;
-        font-size: 1.7rem;
+        font-weight:bolder;
         text-align: center;
     }
     .logo1{
@@ -168,7 +167,7 @@
         text-align: justify;
     }
 } 
-@media (max-width: 759px) {
+/* @media (max-width: 759px) {
     .judul1 {
         color: #31081F;
         font-family: "Montserrat", sans-serif;
@@ -248,8 +247,8 @@
         font-size:40px;
         text-align: justify;
     }
-} 
-@media (max-width: 920px) {
+}  */
+/* @media (max-width: 920px) {
     .judul1 {
         color: #31081F;
         font-family: "Montserrat", sans-serif;
@@ -329,8 +328,8 @@
         font-size:40px;
         text-align: justify;
     }
-} 
-@media (max-width: 1024px) {
+}  */
+/* @media (max-width: 1024px) {
     .judul1 {
         color: #31081F;
         font-family: "Montserrat", sans-serif;
@@ -415,5 +414,5 @@
         padding-top: 2rem;
         text-align: justify;
     }
-} 
+}  */
 
