--- a/resources/css/about.css
+++ b/resources/css/about.css
@@ -57,7 +57,7 @@
     font-family: "Plus Jakarta Sans", sans-serif;
     font-weight: 600;
     font-size:35px;
-    padding-left: 2.5rem;
+    padding-left: 5rem;
     padding-right: 5rem;
     text-align: justify;
 }
@@ -87,10 +87,11 @@
     text-align: justify;
 }
 
-@media (max-width: 438px) {
+@media (max-width: 439px) {
     .judul1 {
         color: #31081F;
-        font-family: "Montserrat", sans-serif;
+        font-family: "Montserrat", sans-serif;    
+        font-size: 1.7rem;
         font-weight:bolder;
         text-align: center;
     }
@@ -145,6 +146,7 @@
         font-weight: 600;
         font-size:12px;
         padding-right: 1rem;
+        padding-left: 1rem;
         text-align: justify;
     }
     .list2{
@@ -167,7 +169,7 @@
         text-align: justify;
     }
 } 
-/* @media (max-width: 759px) {
+@media (min-width: 440px) and (max-width: 759px) {
     .judul1 {
         color: #31081F;
         font-family: "Montserrat", sans-serif;
@@ -247,8 +249,8 @@
         font-size:40px;
         text-align: justify;
     }
-}  */
-/* @media (max-width: 920px) {
+} 
+@media (min-width: 761px) and (max-width: 920px) {
     .judul1 {
         color: #31081F;
         font-family: "Montserrat", sans-serif;
@@ -306,6 +308,7 @@
         font-family: "Plus Jakarta Sans", sans-serif;
         font-weight: 600;
         font-size:20px;
+        padding-left: 2rem;
         padding-right: 2rem;
         text-align: justify;
     }
@@ -328,8 +331,8 @@
         font-size:40px;
         text-align: justify;
     }
-}  */
-/* @media (max-width: 1024px) {
+} 
+@media (min-width: 921px) and (max-width: 1024px) {
     .judul1 {
         color: #31081F;
         font-family: "Montserrat", sans-serif;
@@ -385,8 +388,8 @@
         font-family: "Plus Jakarta Sans", sans-serif;
         font-weight: 600;
         font-size:30px;
-        padding-left: 2.5rem;
-        padding-right: 5rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
         text-align: justify;
     }
 
@@ -414,5 +417,4 @@
         padding-top: 2rem;
         text-align: justify;
     }
-}  */
-
+} 
